# dbchat-capstone

./: .gitignore  README.md
dbchat-app/IGNORE/frontend_REACT/dbchat/src/: ChatbotAPI.js
dbchat-app/IGNORE/frontend_REACT/dbchat/src/components/: Header.jsx
dbchat-app/backend/: ignore-run_k8.sh  run.sh  sql_init.sh
dbchat-app/backend/dbchat/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.main  Dockerfile.mysql  docker-compose.yaml  pyproject.toml
dbchat-app/backend/dbchat/dbchat/: main.py
dbchat-app/backend/dbchat/dbchat/assets/: 1-init.sql  assets.py  test_SageMaker.py  test_db.py
dbchat-app/backend/dbchat/mistral7b_ft_hypm5_10e_dbchat/: adapter_config.json
dbchat-app/backend/dbchat/tests/: test_GPT.py  test_bulk_inputs.py  test_db.py  test_input.py  test_mistral.py
dbchat-app/backend/mistral7b_ft_hypm5_10e_dbchat/: README.md
dbchat-app/frontend/: run.sh
dbchat-app/frontend/dbchat/: package-lock.json  run.sh
dbchat-app/frontend/dbchat-frontend/: pyproject.toml
dbchat-app/frontend/dbchat-frontend/dbchat_frontend/: main.py
dbchat-app/frontend/dbchat/src/: ChatbotAPI.js  dbchat_api.js  index.js  styles.css
dbchat-app/frontend/dbchat/src/components/: BotMessage.jsx  Header.jsx  Input.jsx  Loader.jsx  Messages.jsx  UserMessage.jsx
dbchat-app/frontend_REACT/: run.sh
dbchat-app/frontend_REACT/dbchat/: Dockerfile.chatbot  package.json
dbchat-app/frontend_REACT/dbchat/src/: index.js
dbchat-app/frontend_REACT/dbchat/src/components/: BotMessage.jsx
dbchat-app/frontend_streamlit/: DBChat FE - streamlit.py
dbchat-app/test/test-app/: Dockerfile.test  package-lock.json
dbchat-app/test/test-app/src/: App.js
