[tool.poetry]
name = "dbchat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
joblib = "^1.3.2"
uvicorn = "^0.27.1"
fastapi = "^0.110.0"
requests = "^2.31.0"
sqlalchemy = "^2.0.27"
langchain-openai = "^0.0.7"
pymysql = "^1.1.0"
cryptography = "^42.0.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
