[tool.poetry]
name = "dbchat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
joblib = "^1.3.2"
uvicorn = "^0.27.1"
fastapi = "^0.110.0"
requests = "^2.31.0"
sqlalchemy = "^2.0.27"
langchain-openai = "^0.0.7"
pymysql = "^1.1.0"
cryptography = "^42.0.5"
sqlvalidator = "^0.0.20"
pandas = "^2.2.1"
boto3 = "^1.34.71"
python-dotenv = "^1.0.1"
torch = [
  {version = "^2.1.1", "platform" = "win32"},
  {version = "^2.1.1", "platform" = "linux"},
  {version = "^2.1.1", "platform" = "darwin",  markers = "platform_machine == 'x86_64'" },
  {version = "^2.1.1", "platform" = "darwin",  markers = "platform_machine == 'arm64'" },
  # {version = "^2.1.1+cu121", source = "pytorch", "platform" = "linux"}, # this is for training
]
transformers = "^4.39.3"
accelerate = "^0.29.2"
trl = "^0.8.2"
peft = "^0.10.0"
bitsandbytes = "^0.43.1"
datasets = "^2.18.0"
google-cloud-storage = "^2.16.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
psutil = "^5.9.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"